--- a/index.html
+++ b/index.html
@@ -1,61 +1,42 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>Home | SEO Writer & Web Developer | Professional Portfolio</title>
-    <meta
-      name="title"
-      content="Markide | Expert SEO Writer & Web Developer | Professional Portfolio"
-    />
-    <meta
-      name="description"
-      content="Expert SEO Writer and Web Developer with proven track record in creating high-ranking content and responsive websites. Specializing in technical SEO and modern web development."
-    />
-    <meta
-      name="keywords"
-      content="SEO Writer, Web Developer, Content Strategy, Frontend Development, Technical SEO, Professional Portfolio"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://markide.co.ke/" />
-    <meta property="og:title" content="Markide | SEO Writer & Web Developer" />
-    <meta
-      property="og:description"
-      content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites"
-    />
-    <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
+  <!-- Primary Meta Tags -->
+  <title>Home | SEO Writer & Web Developer | Professional Portfolio</title>
+  <meta name="title" content="Markide | Expert SEO Writer & Web Developer | Professional Portfolio" />
+  <meta name="description"
+    content="Expert SEO Writer and Web Developer with proven track record in creating high-ranking content and responsive websites. Specializing in technical SEO and modern web development." />
+  <meta name="keywords"
+    content="SEO Writer, Web Developer, Content Strategy, Frontend Development, Technical SEO, Professional Portfolio" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://markide.co.ke/" />
-    <meta
-      property="twitter:title"
-      content="Markide | SEO Writer & Web Developer"
-    />
-    <meta
-      property="twitter:description"
-      content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites"
-    />
-    <meta
-      property="twitter:image"
-      content="https://markide.co.ke/images/Pr.PNG"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://markide.co.ke/" />
+  <meta property="og:title" content="Markide | SEO Writer & Web Developer" />
+  <meta property="og:description"
+    content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites" />
+  <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://markide.co.ke/" />
+  <meta property="twitter:title" content="Markide | SEO Writer & Web Developer" />
+  <meta property="twitter:description"
+    content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites" />
+  <meta property="twitter:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Font Awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
-    <!-- Schema Markup -->
-    <script type="application/ld+json">
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
@@ -75,127 +56,123 @@
       }
     </script>
 
-    <!-- CSS File Link -->
-    <link rel="stylesheet" href="css/index.css" />
+  <!-- CSS File Link -->
+  <link rel="stylesheet" href="css/index.css" />
 
-  </head>
-  <body>
+</head>
 
-    <!-- Header -->
-    <div id="header-container"></div>
+<body>
 
-    <!-- Main Content -->
-    <main>
-      <!-- Hero Section -->
-      <section class="hero">
-        <div class="hero-container">
-          <h1>Crafting Digital Excellence Through SEO & Development</h1>
-          <p class="hero-subtitle">
-            Expert SEO Writer and Web Developer helping businesses achieve
-            higher rankings and better user experiences.
-          </p>
-          <div class="cta-buttons">
-            <a href="portfolio.html" class="cta-primary">View Portfolio</a>
-            <a href="contact.html" class="cta-secondary">Get in Touch</a>
-          </div>
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JJ0MLBJ1V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0JJ0MLBJ1V');
+  </script>
+
+
+  <!-- Header -->
+  <div id="header-container"></div>
+
+  <!-- Main Content -->
+  <main>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-container">
+        <h1>Crafting Digital Excellence Through SEO & Development</h1>
+        <p class="hero-subtitle">
+          Expert SEO Writer and Web Developer helping businesses achieve
+          higher rankings and better user experiences.
+        </p>
+        <div class="cta-buttons">
+          <a href="portfolio.html" class="cta-primary">View Portfolio</a>
+          <a href="contact.html" class="cta-secondary">Get in Touch</a>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- Services Overview -->
-      <section class="services-overview">
-        <div class="container">
-          <h2>Expert Services:</h2>
-          <div class="services-grid">
-            <!-- SEO Writing -->
-            <article class="service-card">
-              <h3>SEO Writing:</h3>
-              <ul>
-                <li>SEO-Optimized Content Creation</li>
-                <li>Keyword Research & Strategy</li>
-                <li>Content Audit & Optimization</li>
-                <li>Meta Description Writing</li>
-              </ul>
-              <a href="services.html#seo-writing" class="learn-more"
-                >Learn More</a
-              >
-            </article>
+    <!-- Services Overview -->
+    <section class="services-overview">
+      <div class="container">
+        <h2>Expert Services:</h2>
+        <div class="services-grid">
+          <!-- SEO Writing -->
+          <article class="service-card">
+            <h3>SEO Writing:</h3>
+            <ul>
+              <li>SEO-Optimized Content Creation</li>
+              <li>Keyword Research & Strategy</li>
+              <li>Content Audit & Optimization</li>
+              <li>Meta Description Writing</li>
+            </ul>
+            <a href="services.html#seo-writing" class="learn-more">Learn More</a>
+          </article>
 
-            <!-- Web Development -->
-            <article class="service-card">
-              <h3>Web Development:</h3>
-              <ul>
-                <li>Custom Website Development</li>
-                <li>Responsive Design</li>
-                <li>Performance Optimization</li>
-                <li>Technical SEO Implementation</li>
-              </ul>
-              <a href="services.html#web-development" class="learn-more"
-                >Learn More</a
-              >
-            </article>
-          </div>
+          <!-- Web Development -->
+          <article class="service-card">
+            <h3>Web Development:</h3>
+            <ul>
+              <li>Custom Website Development</li>
+              <li>Responsive Design</li>
+              <li>Performance Optimization</li>
+              <li>Technical SEO Implementation</li>
+            </ul>
+            <a href="services.html#web-development" class="learn-more">Learn More</a>
+          </article>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- Featured Work -->
-      <section class="featured-work">
-        <div class="container">
-          <h2>Featured Projects:</h2>
-          <div class="project-grid">
-            <!-- SEO Project -->
-            <article class="project-card">
-              <img src="images/suv.jpg" alt="Online Safety" loading="lazy" />
-              <h3>Online Safety</h3>
-              <p>How To Prevent Phone Tracking In Kenya</p>
-              <a
-                href="https://experiencekenya.co.ke/how-to-prevent-phone-tracking-in-kenya/"
-                target="_blank"
-                class="view-project"
-                >View post</a
-              >
-            </article>
+    <!-- Featured Work -->
+    <section class="featured-work">
+      <div class="container">
+        <h2>Featured Projects:</h2>
+        <div class="project-grid">
+          <!-- SEO Project -->
+          <article class="project-card">
+            <img src="images/suv.jpg" alt="Online Safety" loading="lazy" />
+            <h3>Online Safety</h3>
+            <p>How To Prevent Phone Tracking In Kenya</p>
+            <a href="https://experiencekenya.co.ke/how-to-prevent-phone-tracking-in-kenya/" target="_blank"
+              class="view-project">View post</a>
+          </article>
 
-            <!-- Development Project -->
-            <article class="project-card">
-              <img
-                src="images/qr.jpg"
-                alt="qr_ticket_system"
-                loading="lazy"
-              />
-              <h3>qr_ticket_system</h3>
-              <p>
-                This project is a QR ticket system that allows you to generate and manage QR tickets.
-              </p>
-              <a
-              href="https://github.com/Markide1/qr_ticket_system"
-                target="_blank"
-                class="view-project"
-                >View Project</a
-              >
-            </article>
-          </div>
+          <!-- Development Project -->
+          <article class="project-card">
+            <img src="images/qr.jpg" alt="qr_ticket_system" loading="lazy" />
+            <h3>qr_ticket_system</h3>
+            <p>
+              This project is a QR ticket system that allows you to generate and manage QR tickets.
+            </p>
+            <a href="https://github.com/Markide1/qr_ticket_system" target="_blank" class="view-project">View Project</a>
+          </article>
         </div>
-      </section>
+      </div>
+    </section>
 
-      <!-- Call to Action -->
-      <section class="cta-section">
-        <div class="container">
-          <h2>Ready to Elevate Your Digital Presence?</h2>
-          <p>
-            Let's discuss how we can improve your website's performance and
-            content strategy.
-          </p>
-          <a href="contact.html" class="cta-button">Schedule a Consultation</a>
-        </div>
-      </section>
-    </main>
+    <!-- Call to Action -->
+    <section class="cta-section">
+      <div class="container">
+        <h2>Ready to Elevate Your Digital Presence?</h2>
+        <p>
+          Let's discuss how we can improve your website's performance and
+          content strategy.
+        </p>
+        <a href="contact.html" class="cta-button">Schedule a Consultation</a>
+      </div>
+    </section>
+  </main>
 
-    <!-- Footer -->
-    <div id="footer-container"></div>
+  <!-- Footer -->
+  <div id="footer-container"></div>
 
-    <!-- JavaScript -->
-    <script src="js/components.js" defer></script>
+  <!-- JavaScript -->
+  <script src="js/components.js" defer></script>
 
-    
-  </body>
+
+</body>
+
 </html>
