--- a/portfolio.html
+++ b/portfolio.html
@@ -1,65 +1,61 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>
-      Markide | Professional Portfolio - Web Development & SEO Writing Projects
-    </title>
-    <meta
-      name="title"
-      content="Markide | Web Developer & SEO Writer | Professional Portfolio"
-    />
-    <meta
-      name="description"
-      content="Explore my portfolio showcasing successful web development projects and SEO writing expertise. See how I build responsive websites and optimize content for high search rankings."
-    />
-    <meta
-      name="keywords"
-      content="Web Developer, SEO Writer, Portfolio, Frontend Development, Web Design, Technical SEO, Professional Projects"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://markide.co.ke/" />
-    <meta property="og:title" content="Markide | Professional Portfolio" />
-    <meta
-      property="og:description"
-      content="Explore my portfolio showcasing successful web development projects and SEO writing expertise."
-    />
-    <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
+  <!-- Primary Meta Tags -->
+  <title>
+    Markide | Professional Portfolio - Web Development & SEO Writing Projects
+  </title>
+  <meta name="title" content="Markide | Web Developer & SEO Writer | Professional Portfolio" />
+  <meta name="description"
+    content="Explore my portfolio showcasing successful web development projects and SEO writing expertise. See how I build responsive websites and optimize content for high search rankings." />
+  <meta name="keywords"
+    content="Web Developer, SEO Writer, Portfolio, Frontend Development, Web Design, Technical SEO, Professional Projects" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://markide.co.ke/" />
-    <meta property="twitter:title" content="Markide | Professional Portfolio" />
-    <meta
-      property="twitter:description"
-      content="Explore my portfolio showcasing successful web development projects and SEO writing expertise."
-    />
-    <meta
-      property="twitter:image"
-      content="https://markide.co.ke/images/Pr.PNG"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://markide.co.ke/" />
+  <meta property="og:title" content="Markide | Professional Portfolio" />
+  <meta property="og:description"
+    content="Explore my portfolio showcasing successful web development projects and SEO writing expertise." />
+  <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://markide.co.ke/" />
+  <meta property="twitter:title" content="Markide | Professional Portfolio" />
+  <meta property="twitter:description"
+    content="Explore my portfolio showcasing successful web development projects and SEO writing expertise." />
+  <meta property="twitter:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Font Awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
-    <link rel="stylesheet" href="/css/portfolio.css" />
-  </head>
-  <body>
-    <!-- Header -->
-    <div id="header-container"></div>
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
 
-    <main>
+  <link rel="stylesheet" href="/css/portfolio.css" />
+</head>
+
+<body>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JJ0MLBJ1V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0JJ0MLBJ1V');
+  </script>
+
+  <!-- Header -->
+  <div id="header-container"></div>
+
+  <main>
 
     <!-- Hero section -->
     <main>
@@ -67,11 +63,7 @@
         <div class="container">
           <div class="hero-content">
             <div class="portrait-container">
-              <img
-                src="/images/work.jpg"
-                alt="Markide - SEO Writer & Web Developer"
-                class="portrait"
-              />
+              <img src="/images/work.jpg" alt="Markide - SEO Writer & Web Developer" class="portrait" />
             </div>
             <div class="hero-text">
               <h1><i class="fas fa-briefcase"></i>
@@ -87,105 +79,102 @@
       </section>
 
 
-    <main class="projects-container">
-      <section class="project">
-        <h2>YEPSA NGO Website</h2>
-        <div class="project-image">
-          <img src="/images/yepsa.png" alt="YEPSA NGO Website" />
-        </div>
-        <div class="project-details">
-          <p>
-            I developed a professional and user-friendly website for YEPSA,
-            enabling seamless communication and information sharing with clients
-            globally. The platform serves as a central hub for showcasing the
-            organization's services, achievements, and initiatives, fostering
-            better engagement with their audience and strengthening their global
-            presence..
-          </p>
-          <div class="project-tech">
-            <b>Tech stack:</b>
-            <span>React</span>
-            <span>PHP/Laravel</span>
+      <main class="projects-container">
+        <section class="project">
+          <h2>YEPSA NGO Website</h2>
+          <div class="project-image">
+            <img src="/images/yepsa.png" alt="YEPSA NGO Website" />
+          </div>
+          <div class="project-details">
+            <p>
+              I developed a professional and user-friendly website for YEPSA,
+              enabling seamless communication and information sharing with clients
+              globally. The platform serves as a central hub for showcasing the
+              organization's services, achievements, and initiatives, fostering
+              better engagement with their audience and strengthening their global
+              presence..
+            </p>
+            <div class="project-tech">
+              <b>Tech stack:</b>
+              <span>React</span>
+              <span>PHP/Laravel</span>
             </div>
-          <div class="project-links">
-            <a href="https://yepsa.africa/" target="_blank" class="btn"
-              >Live Site</a
-            >
+            <div class="project-links">
+              <a href="https://yepsa.africa/" target="_blank" class="btn">Live Site</a>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="project">
-        <h2>Technical Blog Platform</h2>
-        <div class="project-image">
-          <img src="/images/blog.png" alt="Experience Kenya Blog" />
-        </div>
-        <div class="project-details">
-          <p>
-            I manage an SEO-optimized blog that incorporates advanced keyword
-            research and a strategically crafted content plan. This ensures
-            improved search engine visibility, drives targeted traffic, and
-            delivers valuable, engaging content tailored to the audience's
-            needs.
-          </p>
-          <div class="project-tech">
-            <b>Tech stack:</b>
-            <span>WordPress</span>
-            <span>SEO Tools</span>
+        <section class="project">
+          <h2>Technical Blog Platform</h2>
+          <div class="project-image">
+            <img src="/images/blog.png" alt="Experience Kenya Blog" />
           </div>
-          <div class="project-links">
-            <a href="https://experiencekenya.co.ke/" target="_blank" class="btn"
-              >View Blog</a
-            >
+          <div class="project-details">
+            <p>
+              I manage an SEO-optimized blog that incorporates advanced keyword
+              research and a strategically crafted content plan. This ensures
+              improved search engine visibility, drives targeted traffic, and
+              delivers valuable, engaging content tailored to the audience's
+              needs.
+            </p>
+            <div class="project-tech">
+              <b>Tech stack:</b>
+              <span>WordPress</span>
+              <span>SEO Tools</span>
+            </div>
+            <div class="project-links">
+              <a href="https://experiencekenya.co.ke/" target="_blank" class="btn">View Blog</a>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <section class="project">
-        <h2>My Portfolio Website</h2>
-        <div class="project-image">
-          <img src="/images/port.png" alt="Personal Portfolio Website" />
-        </div>
-        <div class="project-details">
-          <p>
-            I developed a responsive, mobile-friendly portfolio template
-            designed to provide an optimal user experience across all devices.
-            With a focus on performance optimization, the template ensures fast
-            load times, seamless navigation, and a visually engaging design to
-            showcase work effectively
-          </p>
-          <div class="project-tech">
-            <b>Tech stack:</b>
-            <span>HTML/CSS</span>
-             <span>JavaScript</span>
+        <section class="project">
+          <h2>My Portfolio Website</h2>
+          <div class="project-image">
+            <img src="/images/port.png" alt="Personal Portfolio Website" />
           </div>
-          <div class="project-links">
-            <a href="https://markide.co.ke/" class="btn">Live site</a>
+          <div class="project-details">
+            <p>
+              I developed a responsive, mobile-friendly portfolio template
+              designed to provide an optimal user experience across all devices.
+              With a focus on performance optimization, the template ensures fast
+              load times, seamless navigation, and a visually engaging design to
+              showcase work effectively
+            </p>
+            <div class="project-tech">
+              <b>Tech stack:</b>
+              <span>HTML/CSS</span>
+              <span>JavaScript</span>
+            </div>
+            <div class="project-links">
+              <a href="https://markide.co.ke/" class="btn">Live site</a>
+            </div>
           </div>
-        </div>
-      </section>
+        </section>
 
-      <!-- Call to Action -->
-      <section class="about-cta">
-        <div class="container">
-          <h2>Let's Work Together</h2>
-          <p>
-            Are you interested in collaborating or learning more about my work?
-            Feel free to reach out—I’d be delighted to connect and discuss
-            potential opportunities or share insights about my projects.
-          </p>
-          <div class="cta-buttons">
-            <a href="contact.html" class="cta-secondary">Get in Touch</a>
+        <!-- Call to Action -->
+        <section class="about-cta">
+          <div class="container">
+            <h2>Let's Work Together</h2>
+            <p>
+              Are you interested in collaborating or learning more about my work?
+              Feel free to reach out—I’d be delighted to connect and discuss
+              potential opportunities or share insights about my projects.
+            </p>
+            <div class="cta-buttons">
+              <a href="contact.html" class="cta-secondary">Get in Touch</a>
+            </div>
           </div>
-        </div>
-      </section>
-    </main>
+        </section>
+      </main>
 
-    <!-- Footer -->
-    <div id="footer-container"></div>
+      <!-- Footer -->
+      <div id="footer-container"></div>
 
-    <!-- JavaScript -->
-    <script src="js/components.js" defer></script>
+      <!-- JavaScript -->
+      <script src="js/components.js" defer></script>
 
-  </body>
+</body>
+
 </html>
