--- a/services.html
+++ b/services.html
@@ -1,63 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Primary Meta Tags -->
-    <title>
-      My Services | SEO Writer & Web Developer | Professional Portfolio
-    </title>
-    <meta
-      name="title"
-      content="Markide | Expert SEO Writer & Web Developer | Professional Portfolio"
-    />
-    <meta
-      name="description"
-      content="Expert SEO Writer and Web Developer with proven track record in creating high-ranking content and responsive websites. Specializing in technical SEO and modern web development."
-    />
-    <meta
-      name="keywords"
-      content="SEO Writer, Web Developer, Content Strategy, Frontend Development, Technical SEO, Professional Portfolio"
-    />
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!-- Open Graph / Facebook -->
-    <meta property="og:type" content="website" />
-    <meta property="og:url" content="https://markide.co.ke/" />
-    <meta property="og:title" content="Markide | SEO Writer & Web Developer" />
-    <meta
-      property="og:description"
-      content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites"
-    />
-    <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
+  <!-- Primary Meta Tags -->
+  <title>
+    My Services | SEO Writer & Web Developer | Professional Portfolio
+  </title>
+  <meta name="title" content="Markide | Expert SEO Writer & Web Developer | Professional Portfolio" />
+  <meta name="description"
+    content="Expert SEO Writer and Web Developer with proven track record in creating high-ranking content and responsive websites. Specializing in technical SEO and modern web development." />
+  <meta name="keywords"
+    content="SEO Writer, Web Developer, Content Strategy, Frontend Development, Technical SEO, Professional Portfolio" />
 
-    <!-- Twitter -->
-    <meta property="twitter:card" content="summary_large_image" />
-    <meta property="twitter:url" content="https://markide.co.ke/" />
-    <meta
-      property="twitter:title"
-      content="Markide | SEO Writer & Web Developer"
-    />
-    <meta
-      property="twitter:description"
-      content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites"
-    />
-    <meta
-      property="twitter:image"
-      content="https://markide.co.ke/images/Pr.PNG"
-    />
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://markide.co.ke/" />
+  <meta property="og:title" content="Markide | SEO Writer & Web Developer" />
+  <meta property="og:description"
+    content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites" />
+  <meta property="og:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Favicon -->
-    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://markide.co.ke/" />
+  <meta property="twitter:title" content="Markide | SEO Writer & Web Developer" />
+  <meta property="twitter:description"
+    content="Expert SEO Writer and Web Developer specializing in high-ranking content and responsive websites" />
+  <meta property="twitter:image" content="https://markide.co.ke/images/Pr.PNG" />
 
-    <!-- Font Awesome CDN -->
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css"
-    />
+  <!-- Favicon -->
+  <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
 
-    <!-- Schema Markup -->
-    <script type="application/ld+json">
+  <!-- Font Awesome CDN -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" />
+
+  <!-- Schema Markup -->
+  <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "Person",
@@ -77,169 +58,180 @@
       }
     </script>
 
-    <title>My Services</title>
-    <link rel="stylesheet" href="/css/services.css" />
-  </head>
-  <body>
-    <!-- Header -->
-    <div id="header-container"></div>
+  <title>My Services</title>
+  <link rel="stylesheet" href="/css/services.css" />
+</head>
 
-        <!-- Hero section -->
-    
-      <section class="hero-section">
-        <div class="two-container">
-          <div class="hero-content">
-            <div class="portrait-container">
-              <img
-                src="/images/ser.jpg"
-                alt="Markide - SEO Writer & Web Developer"
-                class="portrait"
-              />
-            </div>
-            <div class="hero-text">
-              <h1><i class="fas fa-laptop-code"></i>
-                My Services:</h1>
-              <p class="lead">
-                I provide SEO writing to boost search engine rankings and web development
-                services to create responsive, user-friendly websites. My focus is on 
-                improving online presence and driving business growth.
-              </p>
-            </div>
-          </div>
+<body>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JJ0MLBJ1V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0JJ0MLBJ1V');
+  </script>
+
+
+  <!-- Header -->
+  <div id="header-container"></div>
+
+  <!-- Hero section -->
+
+  <section class="hero-section">
+    <div class="two-container">
+      <div class="hero-content">
+        <div class="portrait-container">
+          <img src="/images/ser.jpg" alt="Markide - SEO Writer & Web Developer" class="portrait" />
+        </div>
+        <div class="hero-text">
+          <h1><i class="fas fa-laptop-code"></i>
+            My Services:</h1>
+          <p class="lead">
+            I provide SEO writing to boost search engine rankings and web development
+            services to create responsive, user-friendly websites. My focus is on
+            improving online presence and driving business growth.
+          </p>
+        </div>
+      </div>
+    </div>
+  </section>
+
+  <main>
+
+    <div class="services-container-one">
+      <!-- SEO Writing Services Section -->
+      <section>
+        <h2>SEO Writing Services:</h2>
+        <div>
+          <h3>Content Strategy Development</h3>
+          <p>
+            I craft tailored content strategies that align with your business
+            goals, industry trends, and target audience preferences. This
+            ensures your content is not only engaging but also drives
+            measurable results and brand growth.
+          </p>
+        </div>
+
+        <div>
+          <h3>SEO-Optimized Blog Posts</h3>
+          <p>
+            My blog writing services focus on creating keyword-rich,
+            high-quality content that ranks well on search engines, engages
+            readers, and establishes your brand as an authority in your niche.
+          </p>
+        </div>
+
+        <div>
+          <h3>Website Copy Optimization</h3>
+          <p>
+            Transform your website content into a powerful marketing tool. I enhance readability, integrate strategic
+            keywords,
+            and improve the overall tone to better connect with your audience while boosting search rankings.
+          </p>
+          </p>
+        </div>
+
+        <div>
+          <h3>Keyword Research and Implementation</h3>
+          <p>
+            Using advanced tools and industry insights, I conduct in-depth keyword research to identify opportunities
+            and implement them seamlessly into your content, driving maximum visibility and traffic.
+          </p>
+        </div>
+
+        <div>
+          <h3>Content Audits</h3>
+          <p>
+            My comprehensive content audits help identify gaps, improve underperforming content, and uncover
+            opportunities to boost your site's SEO performance and user engagement.
+          </p>
+        </div>
+
+        <div>
+          <h3>Meta Description Writing</h3>
+          <p>
+            Increase your click-through rates with compelling, well-crafted meta descriptions that
+            capture attention and entice users to visit your site from search results.
+          </p>
+        </div>
+        <div>
+          <h3>Cost</h3>
+          <p>
+            <a href="contact.html#faq">Check this section.</a>
+          </p>
         </div>
       </section>
 
-      <main>
+      <!-- Web Development Services Section -->
+      <section>
+        <h2>Web Development Services:</h2>
+        <div>
+          <h3>Custom Website Development</h3>
+          <p>
+            I design and develop bespoke websites that align with your unique business needs, delivering
+            solutions that are scalable, user-friendly, and equipped for growth.
+          </p>
+        </div>
 
-      <div class="services-container-one">
-        <!-- SEO Writing Services Section -->
-        <section>
-          <h2>SEO Writing Services:</h2>
-          <div>
-            <h3>Content Strategy Development</h3>
-            <p>
-              I craft tailored content strategies that align with your business
-              goals, industry trends, and target audience preferences. This
-              ensures your content is not only engaging but also drives
-              measurable results and brand growth.
-            </p>
-          </div>
+        <div>
+          <h3>Responsive Design</h3>
+          <p>
+            My designs prioritize mobile-friendliness, ensuring your website provides an exceptional viewing
+            experience across all devices, from smartphones to desktops.
+          </p>
+        </div>
 
-          <div>
-            <h3>SEO-Optimized Blog Posts</h3>
-            <p>
-              My blog writing services focus on creating keyword-rich,
-              high-quality content that ranks well on search engines, engages
-              readers, and establishes your brand as an authority in your niche.
-            </p>
-          </div>
+        <div>
+          <h3>Frontend Development</h3>
+          <p>
+            Using the latest technologies and frameworks, I create visually appealing and interactive user
+            interfaces that enhance user engagement and satisfaction.
+          </p>
+        </div>
 
-          <div>
-            <h3>Website Copy Optimization</h3>
-            <p>
-              Transform your website content into a powerful marketing tool. I enhance readability, integrate strategic keywords, 
-      and improve the overall tone to better connect with your audience while boosting search rankings.
-    </p>
-            </p>
-          </div>
+        <div>
+          <h3>Website Optimization</h3>
+          <p>
+            I improve your website's performance with advanced optimization techniques, enhancing load times,
+            reducing bounce rates, and creating a seamless browsing experience for users.
+          </p>
+        </div>
 
-          <div>
-            <h3>Keyword Research and Implementation</h3>
-            <p>
-              Using advanced tools and industry insights, I conduct in-depth keyword research to identify opportunities 
-      and implement them seamlessly into your content, driving maximum visibility and traffic.
-            </p>
-          </div>
+        <div>
+          <h3>Maintenance and Support</h3>
+          <p>
+            I provide ongoing technical support and maintenance, ensuring your website runs smoothly,
+            stays secure, and remains updated with the latest technologies.
+          </p>
+        </div>
 
-          <div>
-            <h3>Content Audits</h3>
-            <p>
-              My comprehensive content audits help identify gaps, improve underperforming content, and uncover 
-      opportunities to boost your site's SEO performance and user engagement.
-            </p>
-          </div>
-
-          <div>
-            <h3>Meta Description Writing</h3>
-            <p>
-              Increase your click-through rates with compelling, well-crafted meta descriptions that 
-              capture attention and entice users to visit your site from search results.
-            </p>
-          </div>
+        <div>
+          <h3>Performance Tuning</h3>
+          <p>
+            Maximize your website’s efficiency with my performance tuning services, designed to enhance speed,
+            server response times, and overall functionality.
+          </p>
+        </div>
+        <div>
           <div>
             <h3>Cost</h3>
             <p>
               <a href="contact.html#faq">Check this section.</a>
             </p>
           </div>
-        </section>
+      </section>
+    </div>
+  </main>
 
-        <!-- Web Development Services Section -->
-        <section>
-          <h2>Web Development Services:</h2>
-          <div>
-            <h3>Custom Website Development</h3>
-            <p>
-              I design and develop bespoke websites that align with your unique business needs, delivering 
-              solutions that are scalable, user-friendly, and equipped for growth.
-            </p>
-          </div>
+  <!-- Footer -->
+  <div id="footer-container"></div>
 
-          <div>
-            <h3>Responsive Design</h3>
-            <p>
-              My designs prioritize mobile-friendliness, ensuring your website provides an exceptional viewing 
-      experience across all devices, from smartphones to desktops.
-            </p>
-          </div>
+  <!-- JavaScript -->
+  <script src="js/components.js" defer></script>
 
-          <div>
-            <h3>Frontend Development</h3>
-            <p>
-              Using the latest technologies and frameworks, I create visually appealing and interactive user 
-      interfaces that enhance user engagement and satisfaction.
-            </p>
-          </div>
+</body>
 
-          <div>
-            <h3>Website Optimization</h3>
-            <p>
-              I improve your website's performance with advanced optimization techniques, enhancing load times, 
-      reducing bounce rates, and creating a seamless browsing experience for users.
-            </p>
-          </div>
-
-          <div>
-            <h3>Maintenance and Support</h3>
-            <p>
-              I provide ongoing technical support and maintenance, ensuring your website runs smoothly, 
-      stays secure, and remains updated with the latest technologies.
-            </p>
-          </div>
-
-          <div>
-            <h3>Performance Tuning</h3>
-            <p>
-              Maximize your website’s efficiency with my performance tuning services, designed to enhance speed, 
-              server response times, and overall functionality.
-            </p>
-          </div>
-          <div>
-            <div>
-              <h3>Cost</h3>
-              <p>
-                <a href="contact.html#faq">Check this section.</a>
-              </p>
-            </div>
-        </section>
-      </div>
-    </main>
-
-    <!-- Footer -->
-    <div id="footer-container"></div>
-
-    <!-- JavaScript -->
-    <script src="js/components.js" defer></script>
-
-  </body>
 </html>
