--- a/contact.html
+++ b/contact.html
@@ -64,6 +64,17 @@
 </head>
 
 <body>
+
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-0JJ0MLBJ1V"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'G-0JJ0MLBJ1V');
+  </script>
+
   <!-- Header -->
   <div id="header-container"></div>
 
