--- a/contact.html
+++ b/contact.html
@@ -63,6 +63,18 @@
   <script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
 </head>
 
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-0JJ0MLBJ1V"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag() { dataLayer.push(arguments); }
+  gtag('js', new Date());
+
+  gtag('config', 'G-0JJ0MLBJ1V');
+</script>
+
+
 <body>
   <!-- Header -->
   <div id="header-container"></div>
